paid/force-app/main/default/objects/Paid_Debit_Note__c/Paid_Debit_Note__c.object-meta.xml
<CustomObject>
    <label>Paid Debit Note</label>
    <nameField>
        <label>Paid Debit Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paid Debit Note</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>