paid/force-app/main/default/objects/Paid_Debit_Note__c/fields/Paid_Debit_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Paid_Debit_Note_Number__c</fullName>
    <displayFormat>DN-{0000}</displayFormat>
    <label>Paid Debit Note Number</label>
    <type>AutoNumber</type>
</CustomField>