paid/force-app/main/default/objects/Paid_Debit_Note__c/fields/Paid_Debit_Note_Source_Action__c.field-meta.xml
<CustomField>
    <fullName>Paid_Debit_Note_Source_Action__c</fullName>
    <label>Paid Debit Note Source Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>