paid/force-app/main/default/objects/Paid_Debit_Note__c/fields/Paid_Effective_Tax_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Effective_Tax_Date__c</fullName>
    <label>Paid Effective Tax Date</label>
    <type>Date</type>
</CustomField>