paid/force-app/main/default/objects/Paid_Debit_Note__c/fields/Paid_Notes__c.field-meta.xml
<CustomField>
    <fullName>Paid_Notes__c</fullName>
    <label>Paid Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>