paid/force-app/main/default/objects/Paid_Debit_Note__c/fields/Paid_Tax_State__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_State__c</fullName>
    <label>Paid Tax State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>